--- a/src/main/resources/static/css/formStyle.css
+++ b/src/main/resources/static/css/formStyle.css
@@ -115,6 +115,6 @@ select{
     border: none;
     width: 100%;
     height:35%;
-    margin: 10px auto 12px auto;
     border-bottom: 1px solid #ccc;
+    margin-bottom:12px;
 }
